fix: change how the server is built

--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "testEncrypt": "ts-node scripts/testEncrypt.ts",
     "dev": "nodemon src/index.ts",
-    "start": "tsc && node dist/index.js"
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
