--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@vscode/sqlite3": "5.1.6-vscode",
     "body-parser": "^1.20.3",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "ramda": "^0.30.1",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite": "^5.1.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
