--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "testEncrypt": "ts-node scripts/testEncrypt.ts",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js && cp -r src/static dist/"
   },
   "keywords": [],
   "author": "",
