--- a/katla-brain/platformio.ini
+++ b/katla-brain/platformio.ini
@@ -12,5 +12,7 @@
 platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
-lib_deps = adafruit/DHT sensor library@^1.4.6
-monitor_speed = 9600
+lib_deps = 
+	adafruit/DHT sensor library@^1.4.6
+	bblanchon/ArduinoJson@^7.2.0
+monitor_speed = 115200
